# geda-gaf

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  pprint-chlog
docs/: Makefile.am  gnetlist.1.in
docs/scheme-api/: .gitignore  geda-scheme.info  geda-scheme.texi
docs/wiki/: best_practices.html  design.css  geda-add_a_ground_plane_to_your_layout.html  geda-bom_readme.html  geda-bom_readme.ru.html  geda-bug_triage_guide.html  geda-bug_triage_guide.nl.html  geda-bug_triage_guide.ru.html  geda-building_pcb.html  geda-circuit_simulation_improvements.html  geda-circuit_simulation_improvements.ru.html  geda-conversion_utilities.html  geda-covered_mp.html  geda-csygas.html  geda-csygas.ru.html  geda-cygwin.html  geda-cygwin.ru.html  geda-data_plotting_improvements.html  geda-data_plotting_improvements.ru.html  geda-data_structure_design_discussion.html  geda-debian.fr.html  geda-debian.html  geda-debian.ru.html  geda-design_flow_and_hierarchy_roadmap.html  geda-devel-tips.html  geda-devel-tips.ru.html  geda-developer.html  geda-developer.ru.html  geda-devmacosx.html  geda-devmacosx.ru.html  geda-documentation.html  geda-documentation.ru.html  geda-download.html  geda-download.ru.html  geda-eagle_pcb_netlister_readme.html  geda-eagle_pcb_netlister_readme.ru.html  geda-example_hsm.html  geda-example_hsm.ru.html  geda-example_usbjtag.html  geda-example_usbjtag.ru.html  (+301 more)
examples/SAB/: Makefile.am  README  err_nofunc.py  err_noprocess.py  err_numargs.py  modify_refdes.py  sab.sch
examples/gTAG/: Makefile.am  README  gTAG-consio.ps  gTAG-jtagio.ps  gTAG-jtagio.sch  gTAG-pcb.net  gTAG-psu.ps  gTAG-ucont.ps  gTAG.bom  gTAG.ps  regen-netlists.sh  regen-postscript.sh
gnetlist-legacy/src/: .gitignore  Makefile.am  g_netlist.c  g_rc.c  g_register.c  globals.c  gnetlist.c  i_vars.c  parsecmd.c  s_cpinlist.c  s_hierarchy.c  s_misc.c  s_net.c  s_netattrib.c  s_netlist.c  s_rename.c  s_traverse.c  vams_misc.c
gschem/include/: Makefile.am  globals.h  gschem.h  gschem_accel_label.h  gschem_action.h  gschem_binding.h  gschem_binding_integer.h  gschem_bottom_widget.h  gschem_change_notification.h  gschem_compselect_dockable.h  gschem_defines.h  gschem_dialog.h  gschem_dialog_misc.h  gschem_dockable.h  gschem_fill_swatch_cell_renderer.h  gschem_find_patch_widget.h  gschem_find_text_dockable.h  gschem_find_text_state.h  gschem_find_text_widget.h  gschem_integer_combo_box.h  gschem_log_dockable.h  gschem_macro_widget.h  gschem_main_window.h  gschem_messages_dockable.h  gschem_multiattrib_dockable.h  gschem_object_properties_dockable.h  gschem_options.h  gschem_options_dockable.h  gschem_page_geometry.h  gschem_page_view.h  gschem_pagesel_dockable.h  gschem_pango.h  gschem_patch.h  gschem_patch_dockable.h  gschem_pin_type_combo.h  gschem_preview.h  gschem_selection_adapter.h  gschem_show_hide_text_widget.h  gschem_swatch_column_renderer.h  gschem_text_properties_dockable.h  (+9 more)
gschem/lib/: Makefile.am  gschem-colormap-bw  gschem-colormap-darkbg  gschem-colormap-lightbg  gschem-colormap-whitebg  gschem-colormap-whitebg-bw  system-gschemrc.scm
gschem/src/: Makefile.am  a_zoom.c  actions.c  actions.decl.h  actions.init.c  g_action.c  g_builtins.c  g_funcs.c  g_hook.c  g_keys.c  g_rc.c  g_register.c  g_window.c  globals.c  gschem.c  gschem_about_dialog.c  gschem_accel_label.c  gschem_action.c  gschem_alignment_combo.c  gschem_arc_dialog.c  gschem_binding.c  gschem_binding_integer.c  gschem_bottom_widget.c  gschem_change_notification.c  gschem_close_confirmation_dialog.c  gschem_compselect_dockable.c  gschem_coord_dialog.c  gschem_dialog.c  gschem_dialog_misc.c  gschem_dockable.c  gschem_fill_swatch_cell_renderer.c  gschem_find_patch_widget.c  gschem_find_text_dockable.c  gschem_find_text_state.c  gschem_find_text_widget.c  gschem_hotkey_dialog.c  gschem_integer_combo_box.c  gschem_log_dockable.c  gschem_macro_widget.c  gschem_main_window.c  (+86 more)
gsymcheck/tests/: Makefile.am  runtest.sh
src/gaf/: Makefile.am  fileformat.py  plainformat.py  plainread.py  plainwrite.py  read.py  ref.py  write.py  xmlformat.py  xmlread.py  xmlwrite.py
src/gaf/netlist/: backend.py  blueprint.py  conn.py  net.py  netlist.py  package.py  pp_graphical.py  pp_hierarchy.py  pp_netattrib.py  pp_power.py  pp_slotting.py  reportgui.py  slib.py
symbols/: Makefile.am  geda-clib.scm
symbols/net-power/: pwr-1.sym  pwr-2.sym  pwr-3.sym  pwr-4.sym  pwr-chassis-1.sym  pwr-common-1.sym  pwr-earth-1.sym
symbols/spice/: spice-title-1.sym
tests/: Makefile.am
tests/cpython/: copy_attached.py  copy_object.py  copy_objects.py  exist.py  get_loc_attach.py  get_loc_order.py  get_objects.py  guile.py  normalize.py  pointer.py  query_attached.py  selection.py  string.py  validate.py
tests/cpython/snippets/: functions.py  guile.py  storage_funcs.py
tests/cpython/storage/: Setup.py  copy_object.py  data_ctors.py  delete_sel.py  exist.py  get_loc_attach.py  get_loc_order.py  get_obdata.py  get_obtype.py  (+11 more)
tests/gaf/: complex.py  pixmap.py  plain_transform.py  plain_transform.sch.xml  ripperdir.py  xmlread.py  xmlread.sch  xmlread.sch.xml  xmlread_log.py  xmlwrite.py  xmlwrite.sch.xml
tests/netlist/: Makefile.am  README  gnet-apitest.scm  net_attr.sch  netname_attr.sch  run-test  run-test.gnetlist  run-test.gnetlist-legacy
tests/python/: base64.py  fixednum.py  hybridnum.py  proxy.py  xml_writer.py
tests/storage/: Setup.h  copy_attached.c  copy_object.c  copy_objects.c  delete_sel.c  exist.c  get_attribute.c  get_location.c  get_obdata.c  get_objects.c  get_obtype.c  invalid_obtype.c  is_selected.c  multiple_assignments.c  normalize.c  null.c  pointer.c  query_attached.c  reloc_attach.c  reloc_order.c  select_by_attribute.c  selection.c  set_attribute.c  set_obdata.c  stat.c  string.c  transient.c  validate.c
xorn/: .gitignore  Makefile.am  NEWS  README  configure.ac  pprint-chlog
xorn/doc/: HACKING  guile-example.py  guile-example.scm  mainpage.md  storage.md
xorn/include/: xornstorage.h
xorn/m4/: prog-cc-warning.m4
xorn/po/: POTFILES.in
xorn/tests/: Makefile.am
(+873 files in other folders)
