exampledir = $(docdir)/examples/SAB/

nobase_example_DATA = \
        sab.sch \
        README \
        modify_refdes.py

EXTRA_DIST = $(nobase_example_DATA)

MOSTLYCLEANFILES = gschem.log *~
CLEANFILES = gschem.log *~
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = gschem.log *~ Makefile.in

