exampledir = $(docdir)/examples/SAB/

example_DATA = \
	sab.sch \
	README \
        modify_refdes.py \
        err_noprocess.py \
        err_nofunc.py \
        err_numargs.py

EXTRA_DIST = $(nobase_example_DATA)

MOSTLYCLEANFILES = gschem.log *~
CLEANFILES = gschem.log *~
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = gschem.log *~ Makefile.in
