## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	globals.h i_vars.h prototype.h x_dialog.h x_states.h \
	gettext.h \
	gschem.h \
	gschemhotkeystore.h \
	gschem_accel_label.h \
	gschem_action.h \
	gschem_binding.h \
	gschem_binding_integer.h \
	gschem_bottom_widget.h \
	gschem_change_notification.h \
	gschem_compselect_dockable.h \
	gschem_defines.h \
	gschem_dialog.h \
	gschem_dialog_misc.h \
	gschem_dockable.h \
	gschem_fill_swatch_cell_renderer.h \
	gschem_find_text_dockable.h \
	gschem_find_text_widget.h \
	gschem_integer_combo_box.h \
	gschem_log_dockable.h \
	gschem_macro_widget.h \
	gschem_main_window.h \
	gschem_messages_dockable.h \
	gschem_multiattrib_dockable.h \
	gschem_object_properties_dockable.h \
	gschem_options.h \
	gschem_options_dockable.h \
	gschem_page_geometry.h \
	gschem_page_view.h \
	gschem_pagesel_dockable.h \
	gschem_patch.h \
	gschem_patch_dockable.h \
	gschem_pin_type_combo.h \
	gschem_preview.h \
	gschem_selection_adapter.h \
	gschem_show_hide_text_widget.h \
	gschem_struct.h \
	gschem_swatch_column_renderer.h \
	gschem_text_properties_dockable.h \
	gschem_toplevel.h \
	stroke.h

MOSTLYCLEANFILES = *.log core FILE *~
CLEANFILES = *.log core FILE *~
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in
