AM_TESTS_ENVIRONMENT= PERL=${PERL} top_srcdir=${srcdir}/../..

check-local:
	$(AM_TESTS_ENVIRONMENT) srcdir=$(srcdir) $(SHELL) $(srcdir)/run_tests.sh

EXTRA_DIST = $(input_files) $(output_files) run_tests.sh tests.list README

input_files = \
	inputs/do_nothing.pl \
	inputs/pcb_example1.xy \
	inputs/pcb_example2.xy \
	inputs/protel_example1_mil.txt \
	inputs/protel_example1_mm.txt \
	inputs/report1.txt \
	inputs/report2.txt

output_files = \
	outputs/chunits_2mm_6col_tab_notit-protel_example1_mil.txt \
	outputs/chunits_2mm_6col_tab_notit-protel_example1_mil.txt-error \
	outputs/chunits_already_done-protel_example1_mil.txt \
	outputs/chunits_already_done-protel_example1_mil.txt-error \
	outputs/chunits_bad_col_num1-pcb_example1.xy \
	outputs/chunits_bad_col_num1-pcb_example1.xy-error \
	outputs/chunits_bad_col_num2-pcb_example1.xy \
	outputs/chunits_bad_col_num2-pcb_example1.xy-error \
	outputs/chunits_col_num_too_high-pcb_example1.xy \
	outputs/chunits_col_num_too_high-pcb_example1.xy-error \
	outputs/chunits_done_notitle-protel_example1_mil.txt \
	outputs/chunits_done_notitle-protel_example1_mil.txt-error \
	outputs/chunits_negative_col_num-pcb_example1.xy \
	outputs/chunits_negative_col_num-pcb_example1.xy-error \
	outputs/chunits_no_units-pcb_example1.xy \
	outputs/chunits_no_units-pcb_example1.xy-error \
	outputs/chunits_to_mil_2cols-protel_example1_mm.txt \
	outputs/chunits_to_mil_2cols-protel_example1_mm.txt-error \
	outputs/chunits_to_mil-protel_example1_mm.txt \
	outputs/chunits_to_mil-protel_example1_mm.txt-error \
	outputs/chunits_to_mm_2cols-protel_example1_mil.txt \
	outputs/chunits_to_mm_2cols-protel_example1_mil.txt-error \
	outputs/chunits_to_mm_6col_tab-protel_example1_mil.txt \
	outputs/chunits_to_mm_6col_tab-protel_example1_mil.txt-error \
	outputs/chunits_to_mm_no_title-protel_example1_mil.txt \
	outputs/chunits_to_mm_no_title-protel_example1_mil.txt-error \
	outputs/chunits_to_mm-protel_example1_mil.txt \
	outputs/chunits_to_mm-protel_example1_mil.txt-error \
	outputs/chunits_units_not_supported-protel_example1_mil.txt \
	outputs/chunits_units_not_supported-protel_example1_mil.txt-error \
	outputs/del_case_insens1-pcb_example1.xy \
	outputs/del_case_insens1-pcb_example1.xy-error \
	outputs/del_case_insens2-pcb_example2.xy \
	outputs/del_case_insens2-pcb_example2.xy-error \
	outputs/del_case_sens1-pcb_example1.xy \
	outputs/del_case_sens1-pcb_example1.xy-error \
	outputs/del_case_sens2-pcb_example2.xy \
	outputs/del_case_sens2-pcb_example2.xy-error \
	outputs/del_case_sens3-pcb_example1.xy \
	outputs/del_case_sens3-pcb_example1.xy-error \
	outputs/del_case_sens4-pcb_example2.xy \
	outputs/del_case_sens4-pcb_example2.xy-error \
	outputs/del_check_cols_no_match-pcb_example1.xy \
	outputs/del_check_cols_no_match-pcb_example1.xy-error \
	outputs/del_check_cols_return_minus1-pcb_example1.xy \
	outputs/del_check_cols_return_minus1-pcb_example1.xy-error \
	outputs/do_nothing-pcb_example1.xy \
	outputs/do_nothing-pcb_example1.xy-error \
	outputs/do_nothing_tabulated-pcb_example1.xy \
	outputs/do_nothing_tabulated-pcb_example1.xy-error \
	outputs/footprint_pcb1-pcb_example1.xy \
	outputs/footprint_pcb1-pcb_example1.xy-error \
	outputs/footprint_protel1-protel_example1_mil.txt \
	outputs/footprint_protel1-protel_example1_mil.txt-error \
	outputs/footprint_report1-report1.txt \
	outputs/footprint_report1-report1.txt-error \
	outputs/insert_col_bad_col_num1-pcb_example1.xy \
	outputs/insert_col_bad_col_num1-pcb_example1.xy-error \
	outputs/insert_col_bad_col_num2-pcb_example1.xy \
	outputs/insert_col_bad_col_num2-pcb_example1.xy-error \
	outputs/insert_col_col_num_too_high-pcb_example1.xy \
	outputs/insert_col_col_num_too_high-pcb_example1.xy-error \
	outputs/insert_col_first_pos-pcb_example1.xy \
	outputs/insert_col_first_pos-pcb_example1.xy-error \
	outputs/insert_col_negative_col_num-pcb_example1.xy \
	outputs/insert_col_negative_col_num-pcb_example1.xy-error \
	outputs/insert_col_second_pos-pcb_example1.xy \
	outputs/insert_col_second_pos-pcb_example1.xy-error \
	outputs/match_col_insens1-pcb_example2.xy \
	outputs/match_col_insens1-pcb_example2.xy-error \
	outputs/match_col_insens2-pcb_example2.xy \
	outputs/match_col_insens2-pcb_example2.xy-error \
	outputs/match_col_insens3-pcb_example1.xy \
	outputs/match_col_insens3-pcb_example1.xy-error \
	outputs/match_col_insens4-pcb_example1.xy \
	outputs/match_col_insens4-pcb_example1.xy-error \
	outputs/match_col_is_negative-pcb_example1.xy \
	outputs/match_col_is_negative-pcb_example1.xy-error \
	outputs/match_col_is_not_num2-pcb_example1.xy \
	outputs/match_col_is_not_num2-pcb_example1.xy-error \
	outputs/match_col_is_not_num-pcb_example1.xy \
	outputs/match_col_is_not_num-pcb_example1.xy-error \
	outputs/match_col_is_real-pcb_example1.xy \
	outputs/match_col_is_real-pcb_example1.xy-error \
	outputs/match_col_is_too_high-pcb_example1.xy \
	outputs/match_col_is_too_high-pcb_example1.xy-error \
	outputs/match_col_sens1-pcb_example1.xy \
	outputs/match_col_sens1-pcb_example1.xy-error \
	outputs/match_col_sens2-pcb_example1.xy \
	outputs/match_col_sens2-pcb_example1.xy-error \
	outputs/match_col_sens3-pcb_example2.xy \
	outputs/match_col_sens3-pcb_example2.xy-error \
	outputs/match_col_sens4-pcb_example2.xy \
	outputs/match_col_sens4-pcb_example2.xy-error \
	outputs/match_no_args-pcb_example1.xy \
	outputs/match_no_args-pcb_example1.xy-error \
	outputs/multiply_bad_col_num1-pcb_example1.xy \
	outputs/multiply_bad_col_num1-pcb_example1.xy-error \
	outputs/multiply_bad_col_num2-pcb_example1.xy \
	outputs/multiply_bad_col_num2-pcb_example1.xy-error \
	outputs/multiply_col_num_too_high-pcb_example1.xy \
	outputs/multiply_col_num_too_high-pcb_example1.xy-error \
	outputs/multiply_integer_factor-pcb_example1.xy \
	outputs/multiply_integer_factor-pcb_example1.xy-error \
	outputs/multiply_negative_col_num-pcb_example1.xy \
	outputs/multiply_negative_col_num-pcb_example1.xy-error \
	outputs/multiply_negative_integer_factor-pcb_example1.xy \
	outputs/multiply_negative_integer_factor-pcb_example1.xy-error \
	outputs/multiply_negative_real_factor-pcb_example1.xy \
	outputs/multiply_negative_real_factor-pcb_example1.xy-error \
	outputs/multiply_real_factor-pcb_example1.xy \
	outputs/multiply_real_factor-pcb_example1.xy-error \
	outputs/multiply_with_checklist-pcb_example1.xy \
	outputs/multiply_with_checklist-pcb_example1.xy-error \
	outputs/offset_bad_col_num1-pcb_example1.xy \
	outputs/offset_bad_col_num1-pcb_example1.xy-error \
	outputs/offset_bad_col_num2-pcb_example1.xy \
	outputs/offset_bad_col_num2-pcb_example1.xy-error \
	outputs/offset_check_cols_match-pcb_example1.xy \
	outputs/offset_check_cols_match-pcb_example1.xy-error \
	outputs/offset_check_cols_no_match-pcb_example1.xy \
	outputs/offset_check_cols_no_match-pcb_example1.xy-error \
	outputs/offset_check_cols_return_minus1-pcb_example1.xy \
	outputs/offset_check_cols_return_minus1-pcb_example1.xy-error \
	outputs/offset_col_num_too_high-pcb_example1.xy \
	outputs/offset_col_num_too_high-pcb_example1.xy-error \
	outputs/offset_match_negative_offset-pcb_example1.xy \
	outputs/offset_match_negative_offset-pcb_example1.xy-error \
	outputs/offset_match_negative_real_offset-pcb_example1.xy \
	outputs/offset_match_negative_real_offset-pcb_example1.xy-error \
	outputs/offset_match_no_units_in_file-pcb_example1.xy \
	outputs/offset_match_no_units_in_file-pcb_example1.xy-error \
	outputs/offset_match_real_offset-pcb_example1.xy \
	outputs/offset_match_real_offset-pcb_example1.xy-error \
	outputs/offset_negative_col_num-pcb_example1.xy \
	outputs/offset_negative_col_num-pcb_example1.xy-error \
	outputs/output_delimiter-pcb_example1.xy \
	outputs/output_delimiter-pcb_example1.xy-error \
	outputs/panelize_bad_ref_col_num1-pcb_example1.xy \
	outputs/panelize_bad_ref_col_num1-pcb_example1.xy-error \
	outputs/panelize_bad_ref_col_num2-pcb_example1.xy \
	outputs/panelize_bad_ref_col_num2-pcb_example1.xy-error \
	outputs/panelize_bad_x_col_num1-pcb_example1.xy \
	outputs/panelize_bad_x_col_num1-pcb_example1.xy-error \
	outputs/panelize_bad_x_col_num2-pcb_example1.xy \
	outputs/panelize_bad_x_col_num2-pcb_example1.xy-error \
	outputs/panelize_bad_y_col_num1-pcb_example1.xy \
	outputs/panelize_bad_y_col_num1-pcb_example1.xy-error \
	outputs/panelize_bad_y_col_num2-pcb_example1.xy \
	outputs/panelize_bad_y_col_num2-pcb_example1.xy-error \
	outputs/panelize_negative_ref_col_num-pcb_example1.xy \
	outputs/panelize_negative_ref_col_num-pcb_example1.xy-error \
	outputs/panelize_negative_x_col_num-pcb_example1.xy \
	outputs/panelize_negative_x_col_num-pcb_example1.xy-error \
	outputs/panelize_negative_y_col_num-pcb_example1.xy \
	outputs/panelize_negative_y_col_num-pcb_example1.xy-error \
	outputs/panelize_ref_col_num_too_high-pcb_example1.xy \
	outputs/panelize_ref_col_num_too_high-pcb_example1.xy-error \
	outputs/panelize_tabulate-pcb_example1.xy \
	outputs/panelize_tabulate-pcb_example1.xy-error \
	outputs/panelize_x_col_num_too_high-pcb_example1.xy \
	outputs/panelize_x_col_num_too_high-pcb_example1.xy-error \
	outputs/panelize_y_col_num_too_high-pcb_example1.xy \
	outputs/panelize_y_col_num_too_high-pcb_example1.xy-error \
	outputs/process_comment-pcb_example1.xy \
	outputs/process_comment-pcb_example1.xy-error \
	outputs/rotate_bad_col_num1-pcb_example1.xy \
	outputs/rotate_bad_col_num1-pcb_example1.xy-error \
	outputs/rotate_bad_col_num2-pcb_example1.xy \
	outputs/rotate_bad_col_num2-pcb_example1.xy-error \
	outputs/rotate_case_insens-pcb_example1.xy \
	outputs/rotate_case_insens-pcb_example1.xy-error \
	outputs/rotate_case_sens-pcb_example1.xy \
	outputs/rotate_case_sens-pcb_example1.xy-error \
	outputs/rotate_check_cols_no_match-pcb_example1.xy \
	outputs/rotate_check_cols_no_match-pcb_example1.xy-error \
	outputs/rotate_check_cols_return_minus1-pcb_example1.xy \
	outputs/rotate_check_cols_return_minus1-pcb_example1.xy-error \
	outputs/rotate_col_num_too_high-pcb_example1.xy \
	outputs/rotate_col_num_too_high-pcb_example1.xy-error \
	outputs/rotate_negative_angle-pcb_example1.xy \
	outputs/rotate_negative_angle-pcb_example1.xy-error \
	outputs/rotate_negative_col_num-pcb_example1.xy \
	outputs/rotate_negative_col_num-pcb_example1.xy-error \
	outputs/rotate_negative_real_angle-pcb_example1.xy \
	outputs/rotate_negative_real_angle-pcb_example1.xy-error \
	outputs/rotate_real_angle-pcb_example1.xy \
	outputs/rotate_real_angle-pcb_example1.xy-error \
	outputs/subst_bad_col_num1-pcb_example1.xy \
	outputs/subst_bad_col_num1-pcb_example1.xy-error \
	outputs/subst_bad_col_num2-pcb_example1.xy \
	outputs/subst_bad_col_num2-pcb_example1.xy-error \
	outputs/subst_check_cols_match-pcb_example1.xy \
	outputs/subst_check_cols_match-pcb_example1.xy-error \
	outputs/subst_check_cols_no_match-pcb_example1.xy \
	outputs/subst_check_cols_no_match-pcb_example1.xy-error \
	outputs/subst_check_cols_return_minus1-pcb_example1.xy \
	outputs/subst_check_cols_return_minus1-pcb_example1.xy-error \
	outputs/subst_col_num_too_high-pcb_example1.xy \
	outputs/subst_col_num_too_high-pcb_example1.xy-error \
	outputs/subst_negative_col_num-pcb_example1.xy \
	outputs/subst_negative_col_num-pcb_example1.xy-error \
	outputs/swap_cols_bad_col1_num1-pcb_example1.xy \
	outputs/swap_cols_bad_col1_num1-pcb_example1.xy-error \
	outputs/swap_cols_bad_col1_num2-pcb_example1.xy \
	outputs/swap_cols_bad_col1_num2-pcb_example1.xy-error \
	outputs/swap_cols_bad_col2_num1-pcb_example1.xy \
	outputs/swap_cols_bad_col2_num1-pcb_example1.xy-error \
	outputs/swap_cols_bad_col2_num2-pcb_example1.xy \
	outputs/swap_cols_bad_col2_num2-pcb_example1.xy-error \
	outputs/swap_cols_col1_num_too_high-pcb_example1.xy \
	outputs/swap_cols_col1_num_too_high-pcb_example1.xy-error \
	outputs/swap_cols_col2_num_too_high-pcb_example1.xy \
	outputs/swap_cols_col2_num_too_high-pcb_example1.xy-error \
	outputs/swap_cols_negative_col1_num-pcb_example1.xy \
	outputs/swap_cols_negative_col1_num-pcb_example1.xy-error \
	outputs/swap_cols_negative_col2_num-pcb_example1.xy \
	outputs/swap_cols_negative_col2_num-pcb_example1.xy-error \
	outputs/swap_cols_no_matchlist-pcb_example1.xy \
	outputs/swap_cols_no_matchlist-pcb_example1.xy-error \
	outputs/swap_cols_no_match-pcb_example1.xy \
	outputs/swap_cols_no_match-pcb_example1.xy-error \
	outputs/swap_cols_with_match-pcb_example1.xy \
	outputs/swap_cols_with_match-pcb_example1.xy-error \
	outputs/translate_bad_col_num1-pcb_example1.xy \
	outputs/translate_bad_col_num1-pcb_example1.xy-error \
	outputs/translate_bad_col_num2-pcb_example1.xy \
	outputs/translate_bad_col_num2-pcb_example1.xy-error \
	outputs/translate_col_chg_all_val_plus_k-pcb_example1.xy \
	outputs/translate_col_chg_all_val_plus_k-pcb_example1.xy-error \
	outputs/translate_col_change_R10_value-pcb_example1.xy \
	outputs/translate_col_change_R10_value-pcb_example1.xy-error \
	outputs/translate_col_no_match1-pcb_example1.xy \
	outputs/translate_col_no_match1-pcb_example1.xy-error \
	outputs/translate_col_no_match2-pcb_example1.xy \
	outputs/translate_col_no_match2-pcb_example1.xy-error \
	outputs/translate_col_num_too_high-pcb_example1.xy \
	outputs/translate_col_num_too_high-pcb_example1.xy-error \
	outputs/translate_col_R10_value_case_insens-pcb_example1.xy \
	outputs/translate_col_R10_value_case_insens-pcb_example1.xy-error \
	outputs/translate_negative_col_num-pcb_example1.xy \
	outputs/translate_negative_col_num-pcb_example1.xy-error
